[gd_scene load_steps=10 format=3 uid="uid://bfcjpq4efming"]

[ext_resource type="Script" uid="uid://bncu4llldqjrd" path="res://scripts/level.gd" id="1_m0bv2"]
[ext_resource type="PackedScene" uid="uid://cqtfijlj7vwni" path="res://scenes/enemy/enemy.tscn" id="2_b7m21"]
[ext_resource type="PackedScene" uid="uid://bo4r5t2hvavcu" path="res://scenes/weapons/shotgun.tscn" id="3_pm6rs"]
[ext_resource type="PackedScene" uid="uid://cm2m4cps6lnq" path="res://scenes/ui/ui.tscn" id="4_vrc4q"]
[ext_resource type="PackedScene" uid="uid://bwge4babpy161" path="res://scenes/player/player.tscn" id="5_x4oov"]
[ext_resource type="Script" uid="uid://dhjhidvuhk8dv" path="res://scripts/spawner.gd" id="6_ivku7"]
[ext_resource type="PackedScene" uid="uid://bcay80aaxis1" path="res://scenes/boundaries/boundary.tscn" id="7_pe1ox"]
[ext_resource type="PackedScene" uid="uid://dnab25acrgyoy" path="res://scenes/weapons/dagger.tscn" id="9_0fkkc"]

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 1
background_color = Color(0.138034, 0.138034, 0.138034, 1)
ambient_light_source = 2
ambient_light_color = Color(0.533333, 0.533333, 0.533333, 1)
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.304462, 0.304462, 0.304462, 1)

[node name="Level" type="Node3D"]
script = ExtResource("1_m0bv2")
enemy_scene = ExtResource("2_b7m21")
weapon_scene = ExtResource("3_pm6rs")

[node name="UI" parent="." instance=ExtResource("4_vrc4q")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="Player" parent="." instance=ExtResource("5_x4oov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Spawner" type="Node3D" parent="."]
script = ExtResource("6_ivku7")

[node name="FloorBoundary" parent="." instance=ExtResource("7_pe1ox")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)

[node name="FloorBoundary2" parent="." instance=ExtResource("7_pe1ox")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 85, 0)

[node name="WallBoundary" parent="." instance=ExtResource("7_pe1ox")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 40, -45)

[node name="WallBoundary3" parent="." instance=ExtResource("7_pe1ox")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 40, 45)

[node name="WallBoundary2" parent="." instance=ExtResource("7_pe1ox")]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 45, 40, 0)

[node name="WallBoundary4" parent="." instance=ExtResource("7_pe1ox")]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, -45, 40, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0, 0.866025, 0.5, 3.55271e-15, -0.5, 0.866025, 1, 1.77636e-15, -3.07674e-15, 0, 30, 0)
light_color = Color(0.938865, 0.90377, 0.865132, 1)
light_energy = 2.0
shadow_enabled = true

[node name="Dagger_PickupItem3" parent="." instance=ExtResource("9_0fkkc")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -4, 1, 4)

[node name="EnemyCountTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="WaveTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="EnemyCountTimer" to="." method="_on_enemy_count_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
